# MarketRiskEngine

./: .gitignore  pyproject.toml
src/market_risk_engine/: __init__.py  backtester.py  data_loader.py  metrics.py
tests/: test_backtester.py  test_data_loader.py  test_metrics.py
